# briqs

./: .gitignore  .gitmodules  README.md  requirements.txt
app/: .gitignore  OLLAMA_SETUP.md  demo_playbooks.py  main.py  pyproject.toml  requirements.txt  test_ollama_integration.py
app/src/app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app/src/config_crewai/: agents.yaml  tasks.yaml
app/src/crew_ai/: LB_tests.py  crew.py  knowledge_graph_tool.py  knowledge_graph_tools.py
app/src/knowledge_base/: briqs_backup_terms_excavator.json  briqs_buyer_playbook.json  briqs_buyer_profile_1.json  briqs_seller_playbook_1.json  briqs_seller_playbook_2.json  briqs_seller_playbook_3.json  buyer_playbook.yaml  excavator_seller1.json  excavator_seller2.json  excavator_seller3.json  excavator_seller4.json  mediation_guidelines.yaml  orchestration_guidelines.yaml  seller_playbook.yaml
app/src/knowledge_graph/: graph.py  mcp_server.py
app/src/mock_data/: aluminium.json  deals.json  excavator.json
app/src/models/: core.py
app/src/playbooks/: briqs_backup_terms_excavator.json  briqs_buyer_playbook.json  briqs_buyer_profile_1.json  briqs_seller_playbook_1.json
app/src/playbooks/aluminium_sheets/: briqs_backup_terms_aluminium.json  briqs_buyer_playbook.json  briqs_seller_playbook_1.json  briqs_seller_playbook_2.json  briqs_seller_playbook_3.json
app/src/playbooks/excavator/: briqs_buyer_playbook.json  briqs_buyer_profile_1.json  briqs_seller_playbook_2.json  briqs_seller_playbook_3.json  briqs_seller_playbooks_combined.json
docs/: scratchpad.md
