[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydub>=0.25.1",
    "crewai>=0.140.0",
    "groq>=0.29.0",
    "openai>=1.93.0",
    "instructor>=1.9.0",
]
