[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydub>=0.25.1",
    "crewai>=0.140.0",
    "crewai-tools>=0.49.0",
    "groq>=0.29.0",
    "openai>=1.93.0",
    "instructor>=1.9.0",
    "pandas>=2.3.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.26",
    "fastmcp>=2.10.2",
    "mcp>=1.10.1",
]
